<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="uk.tomhomewood.whattowatch.ActivityViewTitle">

    <ImageView
        android:id="@+id/title_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_aspectRatio="178%"
        app:layout_widthPercent="100%"
        tools:src="@drawable/demo_backdrop_1" />

    <LinearLayout
        android:id="@+id/title_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_banner"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/poster"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/demo_title_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="@string/demo_title_subheading" />

        <RatingBar
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3.35" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginTop="8dp"
            android:text="@string/demo_title_genres"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>


    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_alignBottom="@+id/title_info"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        app:layout_aspectRatio="67%"
        tools:src="@drawable/demo_poster_1" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_info"
        android:ellipsize="end"
        android:lineSpacingMultiplier="1.1"
        android:maxLines="7"
        android:padding="16dp"
        android:text="@string/demo_title_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginLeft="4dp"
        android:text="@string/read_more"
        android:textColor="@color/colourPrimary"
        android:visibility="gone" />

    <uk.tomhomewood.whattowatch.views.WatchScoreView
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_watch_title"
        android:tint="@color/white"
        android:visibility="gone"
        tools:visibility="invisible" />

</android.support.percent.PercentRelativeLayout>