<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.tomhomewood.whattowatch.ActivityViewTitle">

    <ImageView
        android:id="@+id/title_banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_aspectRatio="178%"
        app:layout_widthPercent="100%"
        tools:src="@drawable/demo_backdrop_1" />
    <!--
        <TextView
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/suggestion_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:textColor="?android:textColorPrimaryInverse"
            android:layout_height="wrap_content"
            android:background="@drawable/scrim_top_medium"
            android:paddingBottom="24dp"/>
    -->
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/scrim_bottom_dark"
        android:paddingBottom="16dp"
        android:paddingTop="48dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="16dp"
            android:elevation="4dp"
            android:scaleType="centerCrop"
            app:layout_aspectRatio="67%"
            tools:src="@drawable/demo_poster_1" />

        <LinearLayout
            android:id="@+id/title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/poster"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                tools:text="@string/demo_title_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:textColorPrimaryInverse"
                tools:text="@string/demo_title_subheading" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/white"
                android:rating="3.35" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="8dp"
                android:text="@string/demo_title_genres"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="?android:textColorSecondaryInverse" />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/poster"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.1"
            android:maxLines="2"
            android:padding="16dp"
            android:text="@string/demo_title_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:textColorPrimaryInverse" />

        <uk.tomhomewood.whattowatch.views.WatchScoreView
            android:id="@+id/watch_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginLeft="16dp" />

        <Button
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/watch_score"
            android:layout_alignParentRight="true"
            android:text="@string/next_sugguestion"
            android:textColor="?android:textColorPrimaryInverse" />


    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>